update package.json and README.md

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-dm-react-redux",
   "version": "1.0.0",
-  "description": "A Yeoman generator for React-Redux projects",
+  "description": "Yeoman generator for React-Redux projects",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
