--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -5,7 +5,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "start": "webpack-dev-server",
-    "compile": "webpack",
+    "build": "webpack",
     "test": "mocha --compilers js:babel-core/register --require ./test/test-helper.js  --recursive",
     "test:watch": "npm run test -- --watch"
   },
