--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-dm-react-redux",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Yeoman generator for React-Redux projects",
   "main": "index.js",
   "scripts": {
@@ -27,7 +27,7 @@
     "generators/component"
   ],
   "dependencies": {
-    "ast-query": "^2.0.0",
+    "lodash": "^4.16.6",
     "mkdirp": "^0.5.1",
     "yeoman-generator": "^0.24.1"
   }
